--- a/server/templates/base/index.html
+++ b/server/templates/base/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+        <!-- <meta http-equiv="Content-Security-Policy" content="img-src https://* data: blob: ; child-src blob: ; connect-src https://*.tiles.mapbox.com https://api.mapbox.com ; "> -->
 
         <!-- TODO apple icons + favicons -->
 
