--- a/server/templates/base/nav.html
+++ b/server/templates/base/nav.html
@@ -15,6 +15,12 @@
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
             <ul class="navbar-nav">
                 <li class="nav-item" v-if="isAuthenticated">
+                    <router-link to="/new" class="nav-link">
+                        <i class="now-ui-icons ui-1_simple-add"></i>
+                        <p>New Post</p>
+                    </router-link>
+                </li>
+                <li class="nav-item" v-if="isAuthenticated">
                     <a href="javascript:void(0)" v-on:click="logout" class="nav-link">
                         <i class="now-ui-icons objects_key-25"></i>
                         <p>Logout</p>
