--- a/server/templates/base/scripts.html
+++ b/server/templates/base/scripts.html
@@ -19,6 +19,10 @@
 <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
 <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
+<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.42.2/mapbox-gl.js'></script>
+<script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.1.1/mapbox-gl-geocoder.min.js'></script>
+
+
 <script type="text/javascript">
     // TODO
     // $(document).ready(function() {
