--- a/server/templates/base/style.html
+++ b/server/templates/base/style.html
@@ -7,4 +7,8 @@
 <!-- TODO load bootstrap from local -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
+<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.42.2/mapbox-gl.css' rel='stylesheet' />
+<link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.1.1/mapbox-gl-geocoder.css' type='text/css' />
+
 <link href="/static/css/now-ui-kit.css?v=1.1.0" rel="stylesheet" />
+<link href="/static/css/main.css" rel="stylesheet" />
