--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -7,95 +7,22 @@
 {% endblock %}
 
 {% block script %}
-<script type="text/x-template" id="login-template">
-    {% include "components/login.html" %}
+<script type="text/javascript">
+    window.isAuthenticated = function() {
+        var isAuthenticated = document.cookie.indexOf("authorized=1")!==-1;
+        console.log('isAuthenticated?', isAuthenticated);
+        return isAuthenticated;
+    };
 </script>
+
+{% include "components/login.html" %}
+{% include "components/feed.html" %}
+{% include "components/new-post.html" %}
 
 <script type="text/babel">
     // 0. If using a module system (e.g. via vue-cli), import Vue and VueRouter
     // and then call `Vue.use(VueRouter)`.
     Vue.use(VueRouter);
-
-    // 1. Define route components.
-    // These can be imported from other files
-    const Login = {
-        template: '#login-template',
-        data: function() {
-            return {
-                email: '',
-                password: '',
-                firstName: '',
-                lastName: '',
-                wantsToRegister: false,
-                redirectTo: '',
-            }
-        },
-        methods: {
-            toggleRegister: function() {
-                this.wantsToRegister = !this.wantsToRegister;
-            },
-            login: function() {
-                // TODO validate
-                var me = this;
-                $.ajax({
-                    url: '/api/auth/login',
-                    method: 'POST',
-                    data: {
-                        email: this.email,
-                        password: this.password
-                    },
-
-                    success: function(data) {
-                        console.log(data);
-                        if (data.status == 'success') {
-                            // go to home
-                            me.$emit('login');
-                            me.$router.push('/');
-                        } else if (data.status == 'failure') {
-                            alert(data.msg);
-                        } else {
-                            console.error('No response');
-                        }
-                    },
-
-                    error: function() {
-                        console.error('error!');
-                    }
-                });
-            },
-            register: function() {
-                // TODO validate
-                var me = this;
-                $.ajax({
-                    url: '/api/auth/register',
-                    method: 'POST',
-                    data: {
-                        email: this.email,
-                        password: this.password,
-                        first_name: this.firstName,
-                        last_name: this.lastName
-                    },
-
-                    success: function(data) {
-                        console.log(data);
-                        if (data.status == 'success') {
-                            // go to home
-                            me.$emit('login');
-                            me.$router.push('/');
-                        } else if (data.status == 'failure') {
-                            alert(data.msg);
-                        } else {
-                            console.error('No response');
-                        }
-                    },
-
-                    error: function() {
-                        console.error('error!');
-                    }
-                });
-            },
-        }
-    };
 
     // 2. Define some routes
     // Each route should map to a component. The "component" can
@@ -104,14 +31,35 @@
     // We'll talk about nested routes later.
     const routes = [
         { path: '/login', component: Login },
+        { path: '/', component: Feed, meta: { requiresAuth: true } },
+        { path: '/new', component: NewPost, meta: { requiresAuth: true } }
     ];
 
     // 3. Create the router instance and pass the `routes` option
     // You can pass in additional options here, but let's
     // keep it simple for now.
     const router = new VueRouter({
-        routes // short for `routes: routes`
-    })
+        routes // short for `routes: routes`,
+    });
+
+    router.beforeEach((to, from, next) => {
+        if (to.matched.some(record => record.meta.requiresAuth)) {
+            // this route requires auth, check if logged in
+            // if not, redirect to login page.
+            if (!window.isAuthenticated()) {
+                next({
+                    path: '/login',
+                    query: { redirect: to.fullPath }
+                });
+            } else {
+                next();
+            }
+        } else {
+            next(); // make sure to always call next()!
+        }
+        $('#bodyClick').click();
+    });
+
 
     // 4. Create and mount the root instance.
     // Make sure to inject the router with the router option to make the
@@ -121,13 +69,13 @@
         data: {
             isAuthenticated: false
         },
+        delimiters: ['@{', '}'],
         created: function() {
             this.setAuthenticated();
         },
         methods: {
             setAuthenticated: function() {
-                this.isAuthenticated = document.cookie.indexOf("authorized=1")!==-1;
-                console.log('isAuthenticated?', this.isAuthenticated);
+                this.isAuthenticated = window.isAuthenticated();
             },
             logout: function() {
                 var me = this;
