--- a/server/templates/components/new-post.html
+++ b/server/templates/components/new-post.html
@@ -60,37 +60,7 @@ const NewPost = {
 
     mounted: function() {
         var component = this;
-
-        mapboxgl.accessToken = 'pk.eyJ1IjoiYW5hbmRwZCIsImEiOiJjajl0N2hkeHcwMDF3MnducnJjdWYyZjVhIn0.MD3oCzM56eeo5fusBY0iaA';
-
-        navigator.geolocation.getCurrentPosition(
-            function success(position) {
-                var latitude  = position.coords.latitude;
-                var longitude = position.coords.longitude;
-                component.setLocation(longitude, latitude);
-
-                console.log(longitude, latitude);
-
-                var map = new mapboxgl.Map({
-                    container: 'map',
-                    style: 'mapbox://styles/mapbox/light-v9',
-                    center: [longitude, latitude],
-                    minZoom: 16
-                });
-
-                var marker = new mapboxgl.Marker()
-                    .setLngLat([longitude, latitude])
-                    .addTo(map);
-
-                component.getLocation();
-                component.setupDraggableMarker(map, marker);
-
-            },
-            function error(positionError) {
-                console.error(positionError);
-                console.error("Unable to retrieve your location");
-            }
-        );
+        onMountLoadMap(component);
     },
 
     methods: {
@@ -108,9 +78,10 @@ const NewPost = {
                 },
 
                 success: function(data) {
-                    // console.log(data);
+                    console.log(data);
                     if (data.status == 'success') {
                         console.log(data);
+                        // TODO go to post page
                         // me.$router.push('/my-posts');
                     } else if (data.status == 'failure') {
                         alert(data.msg);
@@ -125,86 +96,12 @@ const NewPost = {
             });
         },
 
-        getLocation: function() {
-            var me = this;
-            var longitude = this.longitude;
-            var latitude = this.latitude;
-            jQuery.ajax({
-                url: `https://api.mapbox.com/geocoding/v5/mapbox.places/${longitude},${latitude}.json`,
-                type: 'GET',
-                data: {
-                    proximity: `${longitude},${latitude}`,
-                    access_token: mapboxgl.accessToken
-
-                },
-                crossDomain: true,
-                success: function(data) {
-                    // console.log(data);
-                    if (data && data.features && data.features.length) {
-                        data.features.some((d) => {
-                            // console.log(this);
-                            if (d.place_type.includes("address")) {
-                                me.setLocation(latitude, longitude, d.place_name);
-                                return true;
-                            }
-                        });
-                    }
-                }
-            });
-        },
-
         setLocation: function(longitude, latitude, address) {
             console.log(longitude, latitude, address);
             this.longitude = longitude;
             this.latitude = latitude;
             this.address = address;
         },
-
-        setupDraggableMarker: function(map, marker) {
-            var component = this;
-
-            marker.getElement().setAttribute('id', 'marker');
-
-            // console.log(marker.getElement());
-
-            function setMarker() {
-                marker.setLngLat(map.getCenter());
-            }
-
-            function changeLocation() {
-                var center = map.getCenter();
-                marker.setLngLat(center);
-                component.setLocation(center.lng, center.lat);
-                component.getLocation();
-            }
-
-
-            map.on('mouseup', function() {
-                // console.log('mouseup');
-                changeLocation();
-            });
-
-            map.on('drag', function() {
-                // console.log('dragging', map.getCenter());
-                setMarker();
-            });
-
-            map.on('touchmove', function() {
-                console.log('touchmove');
-                changeLocation();
-            });
-
-            var touchTimeout;
-
-            map.on('touchend', function() {
-                console.log('touchend');
-                touchTimeout && clearTimeout(touchTimeout);
-                touchTimeout = setTimeout(function() {
-                    changeLocation();
-                }, 2000);
-            });
-
-        }
     }
 };
 </script>
