--- a/server/templates/base/scripts.html
+++ b/server/templates/base/scripts.html
@@ -21,6 +21,7 @@
 
 <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.42.2/mapbox-gl.js'></script>
 <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.1.1/mapbox-gl-geocoder.min.js'></script>
+<script type="text/babel" src="/static/js/map.js"></script>
 
 
 <script type="text/javascript">
