changed strange encounters to babble

--- a/server/templates/base/index.html
+++ b/server/templates/base/index.html
@@ -10,7 +10,7 @@
 
         {% include "base/style.html" %}
 
-        <title>{{ title or "Strange Encounters" }}</title>
+        <title>{{ title or "Babble" }}</title>
     </head>
     <body class="sidebar-collapse">
         <div id="app">
