--- a/server/templates/components/login.html
+++ b/server/templates/components/login.html
@@ -11,7 +11,7 @@
                             <div class="header header-primary text-center">
                                 <div class="logo-container">
                                     <!-- <img src="../assets/img/now-logo.png" alt=""> -->
-                                    <h3>SE</h3>
+                                    <h3>Login to Babble</h3>
                                 </div>
                             </div>
                             <div class="content">
