--- a/server/templates/base/nav.html
+++ b/server/templates/base/nav.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="navbar-translate">
             <a class="navbar-brand" href="/" data-placement="bottom">
-                Strange Encounters
+                Babble
             </a>
             <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-bar bar1"></span>
