Fixed navbar bug

--- a/server/templates/components/login.html
+++ b/server/templates/components/login.html
@@ -9,7 +9,7 @@
                     <div class="card card-login card-plain">
                         <form class="form" method="" action="">
                             <div class="header header-primary text-center">
-                                <div class="logo-container">
+                                <div>
                                     <!-- <img src="../assets/img/now-logo.png" alt=""> -->
                                     <h3>Login to Babble</h3>
                                 </div>
