--- a/server/templates/base/nav.html
+++ b/server/templates/base/nav.html
@@ -1,6 +1,6 @@
 <!-- Navbar -->
 <!-- TODO nav class="navbar-transparent" -->
-<nav class="navbar navbar-expand-lg bg-primary fixed-top" color-on-scroll="400">
+<nav class="navbar navbar-expand-lg bg-primary fixed-top">
     <div class="container">
         <div class="navbar-translate">
             <a class="navbar-brand" href="/" data-placement="bottom">
