--- a/server/templates/base/index.html
+++ b/server/templates/base/index.html
@@ -6,6 +6,17 @@
         <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
         <!-- <meta http-equiv="Content-Security-Policy" content="img-src https://* data: blob: ; child-src blob: ; connect-src https://*.tiles.mapbox.com https://api.mapbox.com ; "> -->
 
+        <link rel="shortcut icon" href="/static/icons/favicon.ico" type="image/x-icon" />
+        <link rel="apple-touch-icon" href="/static/icons/apple-touch-icon.png" />
+        <link rel="apple-touch-icon" sizes="57x57" href="/static/icons/apple-touch-icon-57x57.png" />
+        <link rel="apple-touch-icon" sizes="72x72" href="/static/icons/apple-touch-icon-72x72.png" />
+        <link rel="apple-touch-icon" sizes="76x76" href="/static/icons/apple-touch-icon-76x76.png" />
+        <link rel="apple-touch-icon" sizes="114x114" href="/static/icons/apple-touch-icon-114x114.png" />
+        <link rel="apple-touch-icon" sizes="120x120" href="/static/icons/apple-touch-icon-120x120.png" />
+        <link rel="apple-touch-icon" sizes="144x144" href="/static/icons/apple-touch-icon-144x144.png" />
+        <link rel="apple-touch-icon" sizes="152x152" href="/static/icons/apple-touch-icon-152x152.png" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/static/icons/apple-touch-icon-180x180.png" />
+
         <!-- TODO apple icons + favicons -->
 
         {% include "base/style.html" %}
