--- a/server/templates/base/index.html
+++ b/server/templates/base/index.html
@@ -17,6 +17,10 @@
         <link rel="apple-touch-icon" sizes="152x152" href="/static/icons/apple-touch-icon-152x152.png" />
         <link rel="apple-touch-icon" sizes="180x180" href="/static/icons/apple-touch-icon-180x180.png" />
 
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-title" content="Babble">
+
+
         <!-- TODO apple icons + favicons -->
 
         {% include "base/style.html" %}
